Add Some package & service connection keys

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,12 @@ NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/
 DATABASE_URL=
 
 NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=
+
+PINECONE_INDEX=
+PINECONE_ENVIRONMENT=
+PINECONE_API_KEY=
+
+UPSTASH_REDIS_REST_URL=
+UPSTASH_REDIS_REST_TOKEN=
+
+OPENAI_API_KEY=
