Add Subscription API & Subscription UI

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,13 @@ NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
 NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL=/
 NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/
 
+# This was inserted by `prisma init`:
+# Environment variables declared in this file are automatically made available to Prisma.
+# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
+
+# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
+# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
+
 DATABASE_URL=
 
 NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=
@@ -19,4 +26,6 @@ UPSTASH_REDIS_REST_TOKEN=
 
 OPENAI_API_KEY=
 
-REPLOCATE_API_TOKEN=
+REPLICATE_API_TOKEN=
+
+NEXT_PUBLIC_APP_URL=http://localhost:3000
